--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -3,5 +3,5 @@
 .list {
   flex: 1;
   overflow-y: auto;
-  padding: $space-1;
+  padding: 0 $space-2;
 }
