--- a/src/components/list/list_section/list_section.scss
+++ b/src/components/list/list_section/list_section.scss
@@ -7,10 +7,10 @@
 }
 
 .list-section__header {
-  font-size: $font-xs;
+  font-size: $font-sm;
   color: $color-text-secondary;
   text-transform: uppercase;
   letter-spacing: 0.5px;
-  padding: $space-1 $space-3;
+  padding: $space-1 $space-2;
   line-height: 1;
 }
