--- a/src/styles/_tokens.scss
+++ b/src/styles/_tokens.scss
@@ -51,10 +51,13 @@ $font-family:
 $font-xs: 11px;
 $font-sm: 12px;
 $font-md: 13px;
+$font-base: 14px;
 $font-lg: 15px;
 $font-xl: 20px;
 
 $search-bar-height: 46px;
+$list-item-height: 40px;
+$action-panel-height: 40px;
 $size-grid-icon: 64px;
 
 $transition-fast: 80ms;
